<resources>
    <string name="app_name">Podlewanie roślin</string>
    <string name="package_name">pl.bydgoszcz.guideme.podlewacz</string>

    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="nav_header_title">Powiadomienia o podlewaniu roślin</string>
    <string name="nav_header_subtitle">GuideMe 2019</string>
    <string name="action_settings">Ustawienia</string>
    <string name="flower_frequency_in_days_label"><![CDATA[PODLEJ ZA <b>%s</b> DNI]]></string>
    <string name="flower_frequency_in_days_header">PODLEJ ZA</string>
    <string name="flower_frequency_today_label"><![CDATA[PODLEJ <b>DZISIAJ</b>]]></string>
    <string name="flower_frequency_tomorrow_label"><![CDATA[PODLEJ <b>JUTRO</b>]]></string>
    <string name="flower_frequency_today_label_without_amount_header">PODLEJ</string>
    <string name="flower_frequency_today_label_without_amount_footer">DZISIAJ</string>
    <string name="flower_frequency_in_day_footer">DZIEŃ</string>
    <string name="flower_frequency_late_days_label"><![CDATA[NIE PODLAŁEŚ OD <b>%s</b> DNI]]></string>
    <string name="flower_frequency_late_days_label_without_amount"><![CDATA[NIE PODLAŁEŚ OD]]></string>
    <string name="flower_frequency_late_yesterday_label"><![CDATA[MIAŁEŚ PODLAĆ WCZORAJ]]></string>
    <string name="day">dzień</string>
    <string name="days">dni</string>

    <string name="search_title">Szukaj</string>
    <string name="flower_information">Informacje</string>
    <string name="flower_image_description">Kwiat</string>
    <string name="all_flowers_title">Biblioteka roślin</string>
    <string name="user_flowers_title">Moje rośliny</string>
    <string name="remove_item">Usuń</string>
    <string name="add_new_flower">Dodaj nową</string>
    <string name="new_flower">Nowa roślina</string>
    <string name="frequency_day_label">%s dzień</string>

    <!-- Errors -->
    <string name="image_file_not_found">Nie udało się zapisać zdjęcia</string>
    <string name="accept_menu_button">Zaakceptuj</string>
    <string name="frequency_label">Częstotliwość</string>
    <string name="edit_notification_title">Przypomnienie</string>
    <string name="details_notification_label">Czas podlania</string>
    <string name="privacy_policy">Polityka prywatności</string>
    <string name="notification_title">Nadszedł czas podlania</string>
    <string name="item_added_to_the_list_information">Dodano do Twojej listy</string>
    <string name="name_label">Nazwa</string>
    <string name="description_label">Opis</string>
    <string name="flower_poured">Roślina podlana, następne za %s dni</string>
    <string name="name_cannot_be_empty_message">Nazwa nie może być pusta</string>
    <string name="dialog_title_confirm_save">Zapis zmian</string>
    <string name="dialog_message_cofirm_save">Czy zapisać zmiany?</string>
    <string name="dialog_button_yes">Zatwierdź</string>
    <string name="dialog_button_no">Anuluj</string>
    <string name="image_load_failed">Wystąpił problem z pobraniem zdjęcia</string>
    <string name="click_to_see_photo"><u>Dodaj zdjęcie</u></string>
    <string name="sample_flower_name">Storczyk</string>
    <string name="sample_flower_description"><![CDATA[
    <b>Storczyk (Orchis L.)</b> – rodzaj bylin należących do rodziny storczykowatych (Orchidaceae).
    <p>W zależności od ujęcia systematycznego klasyfikowanych jest do tego rodzaju od 17 do 33 gatunków, przy czym większa liczba podawana jest w starszych klasyfikacjach.</p>

    <p>Po odkryciu w końcu lat 90. XX wieku polifiletycznego charakteru tradycyjnie definiowanego rodzaju, część zaliczanych tu gatunków przeniesiona została przez taksonomów do rodzaju koślaczek (Anacamptis) i Neotinea. Gatunkiem typowym jest storczyk kukawka (Orchis militaris L.)
    </p>]]></string>
    <string name="sample_flower_image_url">https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Orchis_militaris_110503a.jpg/1024px-Orchis_militaris_110503a.jpg</string>
    <string name="pour_the_flower_button">Podlane</string>
    <string name="flower_frequency_alert_message">Podlej jak najszybciej, zapomniałeś to zrobić ostatnio.</string>
    <string name="flower_frequency_notification_remaining_label">Pozostało</string>
    <string name="add_first_flower">Dodaj pierwszą roślinę</string>
    <string name="item_tag_category">Kategoria</string>
    <string name="notification_alert">Alert</string>
    <string name="edit_notification_time_label">Powtórz co:</string>
    <string name="autostart_label">Notifications</string>
    <string name="autostart_description">If you noticed an issue with Notifications, please click the button below and verify if the app has enabled Autostart option</string>
    <string name="autostart_button">Turn on autostart option</string>
    <string name="tags_shadow">Cień</string>
    <string name="tags_massive_watering">Obfite nawodnienie</string>
    <string name="tags_on_stand">Na podstawkę</string>
    <string name="tags_sprinkle">Zraszać</string>
    <string name="tags_likes_sun">Słońce</string>
</resources>
